Want service endopoint for otel

--- a/modules/postgres/config/postgresql.conf
+++ b/modules/postgres/config/postgresql.conf
@@ -827,5 +827,5 @@ pg_tracing.max_span = 10000
 pg_tracing.track = all
 
 # Send spans every 2 seconds to an otel collector
-pg_tracing.otel_endpoint = http://127.0.0.1:4318/v1/traces
+pg_tracing.otel_endpoint = http://grafana-alloy:4318/v1/traces
 pg_tracing.otel_naptime = 2000
